# contact_api_gateway/api/main.go
@@ -30,6 +30,18 @@ type RouterOptions struct {
 	Services services.ServiceManager
 }
 
+// @title           Swagger Example API
+// @version         1.0
+// @description     This is a sample server celler server.
+// @termsOfService  http://swagger.io/terms/
+
+// @contact.name   API Support
+// @contact.url    http://www.swagger.io/support
+// @contact.email  support@swagger.io
+
+// @license.name  Apache 2.0
+// @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
+
 // @securityDefinitions.apikey ApiKeyAuth
 // @in header
 // @name Authorization
